# food_book_api

./: .docker-compose.yml  .dockerignore  .env.fish  .gitignore  Cargo.toml  Dockerfile  README.md  api_doc.md
etc/: .config.toml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2023-04-29-141158_auth_data/: down.sql  up.sql
migrations/2023-04-29-142108_posts_data/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs
src/auth/: mod.rs  models.rs  queries.rs  urls.rs  utils.rs  views.rs
src/fs/: mod.rs  urls.rs  views.rs
src/helper/: db.rs  errors.rs  jwt.rs  mod.rs  passwords.rs  queries.rs  responses.rs  result.rs
src/posts/: mod.rs  models.rs  queries.rs  urls.rs
src/posts/views/: comments.rs  likes.rs  mod.rs  post.rs
