[package]
name = "food_book_api"
version = "0.1.0"
edition = "2021"
description = "Food Book API is backend for Food Book which is a platform to share cooking recipies"
readme = "README.md"
repository = "https://github.com/PiyushXCoder/food_book_api"
license = "GPL-3.0-only"
keywords = ["blogging", "api", "social", "blog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
actix-web-grants = "3.0.1"
actix-web-httpauth = "0.8.0"
actix-web-validator = "5.0.1"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.5", features = ["derive"] }
derive_more = "0.99.17"
diesel = { version = "2.0.4", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
lettre = "0.10.4"
log = "0.4.17"
mime = "0.3.17"
rust-argon2 = "1.0.0"
serde = "1.0.160"
serde_json = "1.0.96"
toml = "0.7.3"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }
